[vdirsyncer] Configure personal.

--- a/env/.config/environment.d/11-koek-dirs.conf
+++ b/env/.config/environment.d/11-koek-dirs.conf
@@ -1,4 +1,5 @@
 KOEK_CALENDARS_DIR="$XDG_DOCUMENTS_DIR/Kalenders"
+KOEK_CONTACTS_DIR="$XDG_DOCUMENTS_DIR/Contacten"
 KOEK_EMAIL_DIR="$XDG_DOCUMENTS_DIR/E-mail"
 KOEK_NEWS_DIR="$XDG_DOCUMENTS_DIR/Nieuws"
 KOEK_NOTES_DIR="$XDG_DOCUMENTS_DIR/Notities"
