--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/stow/emacs/.emacs.d/straight/
-/stow/emacs/.emacs.d/var/*
-!/stow/emacs/.emacs.d/var/eshell/alias
+/stow/emacs/.config/emacs/straight/
+/stow/emacs/.config/emacs/var/*
+!/stow/emacs/.config/emacs/var/eshell/alias
 /ssh/
