--- a/stow/emacs/.local/share/applications/org-protocol.desktop
+++ b/stow/emacs/.local/share/applications/org-protocol.desktop
@@ -3,7 +3,7 @@ Type=Application
 Name=org-protocol
 Icon=emacs
 TryExec=emacsclient
-Exec=sh -c "emacsclient -s \"\\$XDG_RUNTIME_DIR/emacs\" %u"
+Exec=sh -c "emacsclient -s \"\\$XDG_RUNTIME_DIR/emacs/server\" %u"
 Terminal=false
 MimeType=x-scheme-handler/org-protocol;
 NoDisplay=true
