Move download directory

--- a/stow/xdg/.config/environment.d/10-user-dirs.conf
+++ b/stow/xdg/.config/environment.d/10-user-dirs.conf
@@ -1,6 +1,6 @@
 XDG_DESKTOP_DIR="$HOME/.Bureaublad"
 XDG_DOCUMENTS_DIR="$HOME/Documenten"
-XDG_DOWNLOAD_DIR="$HOME/Inbox"
+XDG_DOWNLOAD_DIR="$HOME/Inbox/tmp"
 XDG_MUSIC_DIR="$HOME/Muziek"
 XDG_PICTURES_DIR="$HOME/Afbeeldingen"
 XDG_PUBLICSHARE_DIR="$HOME/Delen"
