Prefer ~ to $HOME

--- a/stow/xdg/.config/environment.d/10-user-dirs.conf
+++ b/stow/xdg/.config/environment.d/10-user-dirs.conf
@@ -1,8 +1,8 @@
-XDG_DESKTOP_DIR="$HOME/.Bureaublad"
-XDG_DOCUMENTS_DIR="$HOME/Documenten"
-XDG_DOWNLOAD_DIR="$HOME/Inbox/tmp"
-XDG_MUSIC_DIR="$HOME/Muziek"
-XDG_PICTURES_DIR="$HOME/Afbeeldingen"
-XDG_PUBLICSHARE_DIR="$HOME/Delen"
-XDG_TEMPLATES_DIR="$HOME/Sjablonen"
-XDG_VIDEOS_DIR="$HOME/Video's"
+XDG_DESKTOP_DIR="~/.Bureaublad"
+XDG_DOCUMENTS_DIR="~/Documenten"
+XDG_DOWNLOAD_DIR="~/Inbox/tmp"
+XDG_MUSIC_DIR="~/Muziek"
+XDG_PICTURES_DIR="~/Afbeeldingen"
+XDG_PUBLICSHARE_DIR="~/Delen"
+XDG_TEMPLATES_DIR="~/Sjablonen"
+XDG_VIDEOS_DIR="~/Video's"
