--- a/stow/xdg/.config/environment.d/10-base-dirs.conf
+++ b/stow/xdg/.config/environment.d/10-base-dirs.conf
@@ -1,3 +1,3 @@
-XDG_CACHE_HOME="$HOME/.cache"
-XDG_CONFIG_HOME="$HOME/.config"
-XDG_DATA_HOME="$HOME/.local/share"
+XDG_CACHE_HOME="~/.cache"
+XDG_CONFIG_HOME="~/.config"
+XDG_DATA_HOME="~/.local/share"
