Revert "Prefer ~ to $HOME"
This reverts commit 9f63b8f078b6ca20c05bf3b77e98a6c3d4cb5fe0.

Only environment variables are expanded, not tilde. Paths must be
absolute.

--- a/stow/env/.config/environment.d/11-koek-dirs.conf
+++ b/stow/env/.config/environment.d/11-koek-dirs.conf
@@ -3,4 +3,4 @@ KOEK_CONTACTS_DIR="$XDG_DOCUMENTS_DIR/Contacten"
 KOEK_EMAIL_DIR="$XDG_DOCUMENTS_DIR/E-mail"
 KOEK_NEWS_DIR="$XDG_DOCUMENTS_DIR/Nieuws"
 KOEK_NOTES_DIR="$XDG_DOCUMENTS_DIR/Notities"
-KOEK_PROJECTS_DIR="~/Projecten"
+KOEK_PROJECTS_DIR="$HOME/Projecten"
