--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
 /secrets/
 /stow/emacs/.config/emacs/straight/
-/stow/emacs/.config/emacs/var/*
-!/stow/emacs/.config/emacs/var/eshell/alias
+/stow/emacs/.config/emacs/var/
